# ACMG

./: README.md  check_clingen_rules.py  check_coldspot_hotspot.py  check_disease_relevant_transcript.py  check_exon_disease_relevant.py  check_exon_pm5.py  check_incompatible_rules.py  check_splice_site_classification_table.py  check_splice_site_classification_table_include_last_exon_pos.py  check_splice_site_pm5_classification_table.py  check_splicevardb.py  classify.py  clingen_evidence_assessor.py  clinvar_annot.py  clinvar_missense.py  clinvar_region.py  clinvar_splicing.py  clinvar_utils.py  config_annotation.py  config_example.yaml  config_schema.json  convert_clingen_to_sqlite.py  create_output.py  custom_exceptions.py  ensembl.py  final_classification.py  functional_evidence_db.py  genotoscope_assess_NMD.py  genotoscope_construct_variant_sequence.py  genotoscope_exists_alternative_start_codon.py  genotoscope_exon_skipping.py  genotoscope_protein_len_diff.py  genotoscope_protein_len_diff_repetitive_region.py  genotoscope_reading_frame_preservation.py  information.py  literature_classifier.py  literature_trigger.py  llm_config.py  llm_prompts.py  load_config.py  (+20 more)
API/: schema_input.json
ClinGen/: ClinGen_rules_frequency_cutoffs.xlsx  ClinGen_rules_pm1_details-已校正--2026-3-30.xlsx  ClinGen_rules_rules.xlsx
acmg_rules/: __init__.py  ba1.py  bp1.py  bp2.py  bp3.py  bp4.py  bp4_mult_strength.py  bp5.py  bp6.py  bp7.py  bp7_deep_intronic.py  bs1.py  bs2.py  bs3.py  bs4.py  computation_evidence_utils.py  functional_splicing_assay_utils.py  pm1.py  pm2.py  pm3.py  pm4.py  (+23 more)
(+27 files in other folders)
