[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acmg-variant-classification"
version = "1.1.0"
description = "ACMG-based variant classification system with Bayesian scoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Variant Classification Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    "pyensembl>=2.0.0,<3.0.0",
    "cyvcf2>=0.30.0,<1.0.0",
    "pybedtools>=0.9.0,<1.0.0",
    "biopython>=1.79,<2.0.0",
    "hgvs>=1.5.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn>=0.22.0,<1.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "requests>=2.28.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "jsonschema>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
exclude = ["test*", "archives*", "ClinGen*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
